fixed logo alignment

--- a/client/src/styles/navbar/main.less
+++ b/client/src/styles/navbar/main.less
@@ -12,6 +12,7 @@
     
     .logo-name {
         font-family: 'Pacifico'!important;
+        vertical-align: -webkit-baseline-middle;
     }
     
     .brand-menu {
